--- a/Frontend/bind.html
+++ b/Frontend/bind.html
@@ -13,11 +13,11 @@
   </head>
   <body>
     <header>
-      <h1 class="namemap">ABYSS</h1>
+      <h1 class="namemap">BIND</h1>
       <section class="percentage">
         <section class="winratepercentage">
           <h2 class="element1">Attacker Win Rate:</h2>
-          <p id="winrate">49,6%</p>
+          <p id="winrate">60,6%</p>
         </section>
         <section class="results">
           <h2 class="element3">Map:</h2>
@@ -27,10 +27,10 @@
     </header>
     <section class="container">
       <section class="maps">
-        <a class="card active" href="./abyss.html">
+        <a class="card" href="./abyss.html">
           <h2>ABYSS</h2>
         </a>
-        <a class="card" href="./bind.html">
+        <a class="card active" href="./bind.html">
           <h2>BIND</h2>
         </a>
         <a class="card" href="#">
@@ -53,13 +53,15 @@
         <section class="cardagnts">
           <div class="wrapper">
             <img
-              src="./assets/img/agentes/jett/maxresdefault (1).jpg"
+              src="./assets/img/agentes/raze/raze-valorant-agent-guide.webp"
+              alt="background image gragas lol"
               class="cover-image"
             />
-            <p class="name-text">JETT</p>
+            <p class="name-text">RAZE</p>
           </div>
           <img
-            src="./assets/img/agentes/jett/600px-Jett_Artwork.png"
+            src="./assets/img/agentes/raze/Raze_-_Full_body.webp"
+            alt="character gragas"
             class="character"
           />
         </section>
@@ -67,12 +69,44 @@
           <div class="wrapper">
             <img
               src="./assets/img/agentes/skye/6292d525f11efc5f69f51b3519cb9873c4a533a7-1920x1080.jpg"
+              alt="background image gragas lol"
               class="cover-image"
             />
             <p class="name-text">SKYE</p>
           </div>
           <img
             src="./assets/img/agentes/skye/Skye_Artwork_Full.webp"
+            alt="character gragas"
+            class="character"
+          />
+        </section>
+        <section class="cardagnts">
+          <div class="wrapper">
+            <img
+              src="./assets/img/agentes/brimstone/brimstone-1.webp"
+              alt="background image gragas lol"
+              class="cover-image"
+            />
+            <p class="name-text">BRIMSTONE</p>
+          </div>
+          <img
+            src="./assets/img/agentes/brimstone/Brimstone_Artwork.png"
+            alt="character gragas"
+            class="character"
+          />
+        </section>
+        <section class="cardagnts">
+          <div class="wrapper">
+            <img
+              src="./assets/img/agentes/viper/valorant-viper-(1).jpg"
+              alt="background image gragas lol"
+              class="cover-image"
+            />
+            <p class="name-text">VIPER</p>
+          </div>
+          <img
+            src="./assets/img/agentes/viper/Viper_png.webp"
+            alt="character gragas"
             class="character"
           />
         </section>
@@ -80,38 +114,14 @@
           <div class="wrapper">
             <img
               src="./assets/img/agentes/cypher/VALORANT-Cypher.jpg"
+              alt="background image gragas lol"
               class="cover-image"
             />
             <p class="name-text">CYPHER</p>
           </div>
           <img
             src="./assets/img/agentes/cypher/Cypher_-_Full_body.webp"
-            class="character"
-          />
-        </section>
-        <section class="cardagnts">
-          <div class="wrapper">
-            <img
-              src="./assets/img/agentes/killjoy/how-to-play-killjoy-valorant.jpg"
-              class="cover-image"
-            />
-            <p class="name-text">KILLJOY</p>
-          </div>
-          <img
-            src="./assets/img/agentes/killjoy/Killjoy_-_Full_body.webp"
-            class="character"
-          />
-        </section>
-        <section class="cardagnts">
-          <div class="wrapper">
-            <img
-              src="./assets/img/agentes/omem/men-valorant-habilidades-dicas-como-jogar.jpg"
-              class="cover-image"
-            />
-            <p class="name-text">OMEM</p>
-          </div>
-          <img
-            src="./assets/img/agentes/omem/Omen_-_Full_body.webp"
+            alt="character gragas"
             class="character"
           />
         </section>
